# barista-champ

./: .gitignore  Cargo.toml  README.md  baristachamp.db
migrations/: 20220506051415_baristachamp.sql  20220506052040_seed.sql  create_db.sql  seed_db.sql
src/: barista.rs  barista_routes.rs  dal.rs  main.rs
