[package]
name = "barista-champ"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-cors = "0.6"
serde = { version = "1.0", features = ["derive"] } 
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["v4", "serde"] }
sqlx = { version = "0.5.13", default-features = false, features = ["sqlite", "runtime-tokio-rustls", "macros"] }
strum = "0.24"
strum_macros = "0.24"
